--- a/restful-service/spring-ajax-banking/pom.xml
+++ b/restful-service/spring-ajax-banking/pom.xml
@@ -116,6 +116,11 @@
             <version>0.11.2</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.10</version>
+        </dependency>
 
     </dependencies>
 
